testsuite/bsc.typechecker/instances/order/FdOrder.bs.bsc-out.expected
checking package dependencies
compiling FdOrder.bs
Error: "FdOrder.bs", line 30, column 24: (T0159)
  The context cannot be satisfied:
    FdOrder.TC2 Prelude.Bool 5
  Its arguments select the instance:
    FdOrder.TC2 Prelude.Bool 6
  (instances of class `FdOrder.TC2' are selected by the arguments at the input
  positions of the class's functional dependencies), but the types the
  instance determines at the dependent positions differ from the types the
  context requires.
Error: "FdOrder.bs", line 33, column 25: (T0159)
  The context cannot be satisfied:
    FdOrder.TC (Prelude.Maybe t) 6
  Its arguments select the instance:
    FdOrder.TC (Prelude.Maybe a__) 5
  (instances of class `FdOrder.TC' are selected by the arguments at the input
  positions of the class's functional dependencies), but the types the
  instance determines at the dependent positions differ from the types the
  context requires.
